app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubernetes-core
  namespace: playground
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kubernetes-core
  template:
    metadata:
      labels:
        app: kubernetes-core
    spec:
      containers:
        - name: kubernetes-core
          image: localhost:32000/kubernetes-core:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-core-service
  namespace: playground
spec:
  selector:
    app: kubernetes-core
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
